<resources>
    <string name="app_name">Sabakuch E-Mock Paper</string>
    <string name="auth_name">Copyright Of Sabakuch.com</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_select_exams">Select Exams</string>
    <string name="nav_item_dashboard">My Dashboard</string>
    <string name="nav_item_profile">Profile Settings</string>
    <string name="nav_item_sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="server_not_responding">Server is not responding.</string>
    <string name="facebook_app_id">347116518958297</string>
    <string name="network_error">Internet Connection Failed!</string>
    <string name="loader_text">Processing..</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_select_exams</item>
        <item>@string/nav_item_dashboard</item>
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_sign_out</item>
    </string-array>
    <string name="list_of_exams">LIST OF EXAMS</string>
    <string name="instruction">Instructions</string>
    <string name="result">Result</string>
    <string name="online_test">Online Test</string>
    <string name="test_review">Test Review</string>
    <string name="select_levels">Select Level</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="referral_hint">Enter you referral code here</string>
    <string name="mobile_number_hint">Enter your mobile number</string>
    <string name="digit_hint">9876543210</string>
    <string name="apply">Apply</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend">Resend</string>
    <string name="fa_arrow_circle_o_right">&#xf0a9;</string>
    <string name="fa_remove">&#xf00d;</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="logged_in_as">Logged in as...</string>
    <string name="referral_code">Referral Code</string>
    <string name="enter_otp_here">Enter OTP Here</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="all_question_are_mandatory">Please attempt all questions.</string>
    <string name="start_test">Start Test</string>
    <string name="_finish">Finish</string>
    <string name="solution">Solution</string>
    <string name="time_taken">Time Taken</string>
    <string name="time_taken_">Time Taken :</string>
    <string name="click_here_for_test_review">Click here for Details!</string>
    <string name="time_remaining">Time Remaining:-</string>
    <string name="test_will_submit_automatically">Test will get submit automatically when the time expire.</string>
    <string name="click_the_start_button">Click the start button to start the test</string>
    <string name="best_of_luck">BEST OF LUCK!</string>
    <string name="prompt_email">Email Address</string>
    <string name="email_hint">E-mail</string>
    <string name="username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="please_enter_username">Please enter username.</string>
    <string name="please_enter_email">Please enter email address.</string>
    <string name="please_create_playlist">Please create playlist first.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="new_on_sabakuch"><u>New on Sabakuch? Sign-up</u></string>
    <string name="login_via">Login via</string>
    <string name="facebook"><u>Facebook</u></string>
    <string name="twitter"><u>Twitter</u></string>
    <string name="google_plus"><u>Google Plus</u></string>
    <string name="work_in_progress">Work in progress.</string>
    <string name="login_or_signup">LOGIN OR SIGN-UP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="fa_arrow_right">&#xf061;</string>
    <string name="signup">Sign-up</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dob">D.O.B</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="answer">Answer</string>
    <string name="i_agree_to_terms"><u>I agree to the terms and conditions</u></string>
    <string name="submit">Submit</string>
    <string name="create">Create</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="please_login_to_continue">Please login to continue.</string>
    <string name="please_login_to_access_this_feature">Please login to access this feature.</string>
    <string name="are_you_sure_to_quit">Are you sure you want to quit?</string>
    <string name="this_paper_would_be_available">This paper would be available 10th March, 2017 onwards</string>
    <string name="generate_OTP">Generate OTP</string>
    <string name="edit">Edit</string>
    <string name="send">Send</string>
    <string name="contact_us">Contact Us</string>
    <string name="email">Email</string>
    <string name="comments">Comments</string>
    <string name="contact_information">Contact Information</string>
    <string name="sabakuch_name"><b>Sabakuch India LLP</b></string>
    <string name="address">Address</string>
    <string name="sabakuch_address">F-26/1 Shankar Market</string>
    <string name="sabakuch_address_place">Connaught Place, New Delhi-110001</string>
    <string name="queries_links">info@sabakuch.com</string>
    <string name="name">Name</string>
    <string name="input_hint">Enter from (0-9) number</string>
    <string name="fa_caret_down">&#xf0d7;</string>
    <string name="fa_calendar_check_o">&#xf274;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_square_o">&#xf096;</string>
    <string name="fa_window_close_o">&#xf2d4;</string>
    <string name="fa_times_circle_o">&#xf05c;</string>
    <string name="fa_check_circle_o">&#xf05d;</string>
    <string name="fa_circle_o">&#xf10c;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="admob_app_id">ca-app-pub-3987143160667404~9572546306</string>
    <string name="banner_home_footer">ca-app-pub-3987143160667404/4433159443</string>
    <string name="interstitial_full_screen">ca-app-pub-3987143160667404/2836614509</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SSC_CPO1">SSC CPO (Staff Selection Commission Central Police Organisation) is conducted by SSC on National level to fill required number of candidates to the post of Sub Inspectors in various Central Government Police Organizations like CRPF, ITBP, CBI, SSB, CISF, BSF and SI in Delhi Police etc. Due to its National level approach this test is taken by a large number of aspirants who wants to join these organizations on the priority basis</string>
    <string name="SSC_CPO2">The SSC CPO exam will take place in 2 stages – Paper I and Paper II. After you qualify both the Papers, you will need to go through a mandatory Physical Endurance Test before you are conducted. But your selection will be based on SSC CPO Paper I &amp; II.</string>
    <string name="SSC_CPO3">
        • Questions in both papers will be of Objective Multiple Choice Type.\n\n•
        Questions will be set in Hindi and English in Parts A, B and C of Paper I.\n\n•
        There will be negative marking of 0.25 marks for each wrong answer in Paper-I &amp; Paper-II.\n\n•
        You are, therefore, advised to keep this in mind while answering the questions.\n\n•
        The Commission may fix qualifying marks in Paper-II later, but as of now, it is just of qualifying nature.\n\n•
        You may also note that as per the official notification of SSC, it has the right to add additional stages to the selection process.</string>
    <string name="SSC_CPO4"><b>Analogy:</b> 6-8 questions
        \nSemantic Analogy, Symbolic/Number Analogy, Figural Analogy, Letter &amp; Number, Image &amp; Meaning based.
        \n\n<b>Classification:</b> 6-7 questions
        \nSemantic Classification, Symbolic/Number Classification, Figural Classification.
        \n\n<b>Series:</b> 3-5 questions
        \nSemantic Series, Number Series, Figural Series, Mixed Series, Series based on General Knowledge.
        \n\n<b>Coding Decoding:</b> 3-4 questions
        \nCoding by analogy, coding by words, coding-decoding by letter shifting, etc.
        \n\n<b>Blood Relations:</b> 1-3 questions
        \nFamily Tree, Coded Blood Relation.
        \n\n<b>Ordering &amp; Ranking:</b> 1-2 questions
        \n\n<b>Alphabet or Word Test:</b> 3-5 questions
        \nMatrix, Jumbled words, sequence &amp; word formation, Suffix etc.
        \n\n<b>Direction &amp; Distance:</b> 1-3 questions
        \nProblem based on route &amp; network.
        \n\n<b>Venn Diagrams:</b> 4-5 questions
        \nQuestion Type: Syllogisms, Logical, Venn Diagrams, etc.
        \n\n<b>Missing Number:</b> 2-3 questions
        \nMatrix &amp; Diagrams (Number &amp; Alphabet based)
        \n\n<b>Puzzles:</b> 2-3 questions
        \nSeating Arrangement, Circular Arrangement, Linear Arrangement, Double Line Up etc.
        \n\n<b>Data Sufficiency:</b> 5-7 questions
        \nArithmetic Operations, Cubes &amp; Dices, etc.
        \n\n<b>Non-Verbal Reasoning:</b> 5-7 questions
        \nCubes, Dices, Paper Folding, Counting Figures.
    </string>
    <string name="SSC_CPO5"><b>Polity:</b> 3-5 questions
        \nConstitution of India, Judiciary, Government Portfolios etc.
        \n\n<b>Science &amp; Technology:</b> 10-13 questions
        \nBiology, Physics, Chemistry, Environment etc.
        \n\n<b>History:</b> 6-7 questions
        \nIndian Freedom Struggle, Ancient &amp; Medieval History.
        \n\n<b>Geography:</b> 5-6 questions
        \nIndian Geography &amp; World Geography.
        \n\n<b>Economy:</b> 4-5 questions
        \nIndian &amp; World Economy, Economic Organization.
        \n\n<b>National &amp; International Affairs:</b> 10-11 questions
        \nNational &amp; International News, Days &amp; Events, Government Policies &amp; Schemes, etc.
    </string>
</resources>